...
                        app:helperText="# of Colors"
                        app:layout_constraintEnd_toStartOf="@+id/guideline3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_colors_quantity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLines="1"
                            android:nextFocusDown="@+id/til_bulbs_per_color" />
...
                        app:helperText="# of bulbs per color"
                        app:layout_constraintEnd_toStartOf="@+id/guideline4"
                        app:layout_constraintStart_toStartOf="@+id/guideline3"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_bulbs_per_color"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLines="1"
                            android:nextFocusDown="@+id/tie_bulbs_to_pick" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_total_bulbs"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...
                        app:helperText="=j * k"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/guideline4"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_total_bulbs"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNone"
                            android:inputType="number"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>
...
                        app:helperText="# of simulations"
                        app:layout_constraintEnd_toStartOf="@+id/guideline4"
                        app:layout_constraintStart_toStartOf="@+id/guideline3"
                        app:layout_constraintTop_toBottomOf="@+id/til_bulbs_per_color">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_simulations_count"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_clear_fields"
                        style="@style/Widget.Material3.Button.TonalButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/clear"
                        app:layout_constraintEnd_toEndOf="parent"
...
